--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.54.0",
     "@unocss/reset": "^0.65.1",
-    "motion": "^12.23.12",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.9.5",
+    "solid-motionone": "^1.0.4",
     "unocss": "^0.65.1",
     "vinxi": "^0.5.7"
   },
