--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.54.0",
     "@unocss/reset": "^0.65.1",
+    "@unpic/solid": "^1.0.0",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.9.5",
     "solid-motionone": "^1.0.4",
