--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@solidjs/start": "^1.1.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.54.0",
+    "@thisbeyond/solid-dnd": "^0.7.5",
     "@unocss/reset": "^0.65.1",
     "@unpic/solid": "^1.0.0",
     "solid-icons": "^1.1.0",
